# customer360-content-lakehouse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-container.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: customer360_dag.py
customer360/: __init__.py  cli.py  generator.py  pipeline.py
docs/: data-contract.md  data-model.md  runbook.md
docs/assets/: architecture-c360.excalidraw
powerbi/: README.md
presentation/customer360-vi/: customer360-vi-notes.md  index.html
tests/: test_pipeline.py
