[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "customer360-content-lakehouse"
version = "1.0.0"
description = "A reproducible Customer 360 content analytics lakehouse built with PySpark."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nguyen Phuc Gia Bao" }]
dependencies = [
  "pandas==2.3.3",
  "pyarrow==21.0.0",
  "pyspark==4.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2", "ruff==0.12.12"]

[project.scripts]
customer360 = "customer360.cli:main"

[tool.setuptools.packages.find]
include = ["customer360*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
